# wnacg-downloader-cli

./: .gitignore  DEVLOG.md  README.md  pyproject.toml  recover_deleted_list.py
skills/: README.md
skills/examples/: batch-from-list.md  search-and-download.md
skills/wnacg-hermes-guided-recovery/: SKILL.md
skills/wnacg-hermes-guided-recovery/references/: batch-preparation-patterns.md  execution-pitfalls-and-fixes.md
skills/wnacg-search-download/: SKILL.md
skills/wnacg-search-download/references/: batch-preparation-patterns.md  reliability-and-rate-limits.md
src/wnacg_downloader/: __init__.py  cli.py  client.py  config.py  downloader.py  exporter.py  utils.py
