[project]
name = "wnacg-downloader"
version = "0.1.0"
description = "WNACG 绅士漫画下载器 - Python CLI 版本 (使用 uv + argparse)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "img2pdf>=0.6.3",
    "lxml>=6.1.1",
    "tqdm>=4.68.2",
]

[project.scripts]
wnacg = "wnacg_downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wnacg_downloader"]

[tool.uv]
# Use dependency-groups for dev in future uv versions
# dependency-groups = { dev = [] }
