[project]
name = "wnacg-downloader"
version = "0.1.0"
description = "WNACG 绅士漫畫下載器 - Python CLI 版本 (基於 lanyeeee/wnacg-downloader)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "img2pdf>=0.6.3",
    "lxml>=6.1.1",
    "tqdm>=4.68.2",
]

[project.urls]
Repository = "https://github.com/Javix-Master/wnacg-downloader-python"
"Original (Rust GUI)" = "https://github.com/lanyeeee/wnacg-downloader"

[project.scripts]
wnacg = "wnacg_downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wnacg_downloader"]

[tool.uv]
# Use dependency-groups for dev in future uv versions
# dependency-groups = { dev = [] }
